--- a/client/pom.xml
+++ b/client/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.rickosborne.audiobookstore</groupId>
+    <groupId>org.rickosborne.romance</groupId>
     <artifactId>audiobookstore-client</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -85,6 +85,16 @@
             <artifactId>google-api-services-sheets</artifactId>
             <version>v4-rev20220411-1.32.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jdk8</artifactId>
+            <version>2.13.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.13.3</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -97,7 +107,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>org.rickosborne.audiobookstore.client.cli.AudiobookStoreClient</mainClass>
+                            <mainClass>org.rickosborne.romance.client.cli.RomanceClient</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -129,7 +139,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.rickosborne.audiobookstore.client.cli.AudiobookStoreClient</mainClass>
+                                    <mainClass>org.rickosborne.romance.client.cli.RomanceClient</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
