--- a/client/pom.xml
+++ b/client/pom.xml
@@ -95,6 +95,11 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>2.13.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.15.1</version>
+        </dependency>
     </dependencies>
 
     <build>
