BookWyrm and Reddit

--- a/logging.properties
+++ b/logging.properties
@@ -1,4 +1,6 @@
 handlers=java.util.logging.ConsoleHandler
-.level=FINE
+.level=ALL
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.SimpleFormatter.format=[%1$tF %1$tT] [%4$-7s] %5$s %n
+
+com.squareup.level=ALL
