--- a/client/pom.xml
+++ b/client/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.5.4</version>
+            <version>42.6.0</version>
         </dependency>
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
@@ -115,7 +115,7 @@
         <dependency>
             <groupId>com.google.apis</groupId>
             <artifactId>google-api-services-sheets</artifactId>
-            <version>v4-rev20221216-2.0.0</version>
+            <version>v4-rev20230227-2.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
@@ -165,7 +165,7 @@
         <dependency>
             <groupId>edu.stanford.nlp</groupId>
             <artifactId>stanford-corenlp</artifactId>
-            <version>4.5.2</version>
+            <version>4.5.3</version>
             <exclusions>
                 <exclusion>
                     <groupId>junit</groupId>
@@ -176,7 +176,7 @@
         <dependency>
             <groupId>edu.stanford.nlp</groupId>
             <artifactId>stanford-corenlp</artifactId>
-            <version>4.5.2</version>
+            <version>4.5.3</version>
             <exclusions>
                 <exclusion>
                     <groupId>junit</groupId>
@@ -188,12 +188,12 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.4.5</version>
+            <version>1.4.6</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.6</version>
+            <version>2.0.7</version>
         </dependency>
     </dependencies>
 
@@ -277,7 +277,7 @@
                         <ignoreVersions>
                             <ignoreVersion>
                                 <type>regex</type>
-                                <version>.+-(alpha|beta)</version>
+                                <version>.+-(alpha|beta|rc[0-9]+)</version>
                             </ignoreVersion>
                         </ignoreVersions>
                         <rules>
