--- a/client/pom.xml
+++ b/client/pom.xml
@@ -7,8 +7,8 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <jackson.version>2.14.2</jackson.version>
-        <junit-jupiter.version>5.9.2</junit-jupiter.version>
+        <jackson.version>2.15.0</jackson.version>
+        <junit-jupiter.version>5.9.3</junit-jupiter.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -135,12 +135,12 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.9.0</version>
+            <version>4.9.1</version>
         </dependency>
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>5.3.2</version>
+            <version>5.3.3</version>
             <exclusions>
                 <exclusion>
                     <groupId>commons-io</groupId>
@@ -165,7 +165,7 @@
         <dependency>
             <groupId>edu.stanford.nlp</groupId>
             <artifactId>stanford-corenlp</artifactId>
-            <version>4.5.3</version>
+            <version>4.5.4</version>
             <exclusions>
                 <exclusion>
                     <groupId>junit</groupId>
@@ -173,10 +173,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!--suppress VulnerableLibrariesLocal -->
         <dependency>
             <groupId>edu.stanford.nlp</groupId>
             <artifactId>stanford-corenlp</artifactId>
-            <version>4.5.3</version>
+            <version>4.5.4</version>
             <exclusions>
                 <exclusion>
                     <groupId>junit</groupId>
@@ -277,7 +278,7 @@
                         <ignoreVersions>
                             <ignoreVersion>
                                 <type>regex</type>
-                                <version>.+-(alpha|beta|rc[0-9]+)</version>
+                                <version>.+-(alpha|beta|rc[0-9]+|[mM][0-9]+)</version>
                             </ignoreVersion>
                         </ignoreVersions>
                         <rules>
@@ -307,6 +308,9 @@
                                 <ignoreVersions>
                                     <ignoreVersion>
                                         <version>1.15.4</version>
+                                    </ignoreVersion>
+                                    <ignoreVersion>
+                                        <version>1.16.1</version>
                                     </ignoreVersion>
                                 </ignoreVersions>
                             </rule>
