--- a/client/pom.xml
+++ b/client/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <jackson.version>2.15.1</jackson.version>
+        <jackson.version>2.15.2</jackson.version>
         <junit-jupiter.version>5.9.3</junit-jupiter.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>info.picocli</groupId>
             <artifactId>picocli</artifactId>
-            <version>4.7.3</version>
+            <version>4.7.4</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -63,7 +63,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.26</version>
+            <version>1.18.28</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -115,7 +115,7 @@
         <dependency>
             <groupId>com.google.apis</groupId>
             <artifactId>google-api-services-sheets</artifactId>
-            <version>v4-rev20230227-2.0.0</version>
+            <version>v4-rev20230526-2.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
@@ -130,7 +130,7 @@
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.16.1</version>
+            <version>1.15.3</version>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -256,12 +256,12 @@
                         <path>
                             <groupId>info.picocli</groupId>
                             <artifactId>picocli-codegen</artifactId>
-                            <version>4.7.3</version>
+                            <version>4.7.4</version>
                         </path>
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
-                            <version>1.18.24</version>
+                            <version>1.18.28</version>
                         </path>
                     </annotationProcessorPaths>
                     <compilerArgs>
@@ -308,6 +308,9 @@
                                 <ignoreVersions>
                                     <ignoreVersion>
                                         <version>1.15.4</version>
+                                    </ignoreVersion>
+                                    <ignoreVersion>
+                                        <version>1.16.1</version>
                                     </ignoreVersion>
                                 </ignoreVersions>
                             </rule>
